--- a/public/admin/css/auth.css
+++ b/public/admin/css/auth.css
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5, h6 {padding: 5px 0 15px 0;color: #fff;-webkit-font-smoothing
 .auth-card {position: relative; background:rgb(255 255 255 / 77%); box-shadow: 0px 4px 70px 10px rgba(0, 0, 0, 0.08); border-radius: 5px; backdrop-filter: blur(10px); }
 .brand-logo{margin-bottom: 1rem;}
 .brand-logo img{height: 100px}
-.forgotpsw-text a {font-size: 14px; color:var(--gray); }
+.forgotpsw-text a {font-size: 14px; color: var(--pink); text-decoration: underline; font-weight: 600; }
 
 .auth-content {padding: 4rem 2rem; position: relative; text-align: center; border-radius: 15px 0 0 15px; }
 .auth-form-info {margin: 0px; padding: 0px; display: flex; align-items: center; flex-wrap: wrap; background: var(--white); }
