--- a/public/admin/css/communityowners.css
+++ b/public/admin/css/communityowners.css
@@ -58,4 +58,35 @@
 .ss-table-col h3 {    font-size: 12px; font-weight: 700; margin: 0 0 5px 0; padding: 0; color:var(--pink);text-align: left; }
 .ss-table-col h4 {font-size: 12px; margin: 0; color:var(--gray); line-height: normal; font-weight: normal; text-align: left;}
 
-button.btn-MarkAsInactive {outline: none; width: 100%; padding: 15px 40px; display: inline-block; color: var(--white); font-size: 14px; font-weight: 600; border-radius: 5px; border: none; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); background: var(--pink); margin-bottom: 5px;
+button.btn-MarkAsInactive {outline: none; width: 100%; padding: 15px 40px; display: inline-block; color: var(--white); font-size: 14px; font-weight: 600; border-radius: 5px; border: none; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); background: var(--pink); margin-bottom: 5px;}
+button.btnDownloadExcel {
+    outline: none;
+    width: 100%;
+    padding: 10px 15px;
+    text-align: center;
+    display: inline-block;
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
+    background:var(--green);
+    margin-bottom:0px;
+}
+
+a.btnDownloadExcel {
+    outline: none;
+    width: 100%;
+    padding: 10px 15px;
+    text-align: center;
+    display: inline-block;
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
+    background:var(--green);
+    margin-bottom:0px;
+}
