--- a/public/admin/css/manufacturers.css
+++ b/public/admin/css/manufacturers.css
@@ -1,3 +1,22 @@
+.search-form-refresh-group {display: flex; gap: 5px; }
+.search-form-input-group {flex: 1; }
+a.btnDownloadExcel {
+    outline: none;
+    width: 100%;
+    padding: 10px 15px;
+    text-align: center;
+    display: inline-block;
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
+    background:var(--green);
+    margin-bottom: 5px;
+}
+
+
 .user-table-item {margin-bottom: 5px; padding: 10px; border-radius: 5px; background: var(--white); }
 
 .user-profile-item {padding: 0 0 0rem 0; display: flex; align-items: center; }
@@ -102,3 +121,16 @@ a.viewbtn {outline: none; padding: 5px 15px; text-align: center; display: inline
 .ss-plant-insights-loaction {display: flex; align-items: center; gap: 10px; }
 .ss-plant-insights-loaction-text h3{    font-size: 12px; font-weight: 700; margin: 0 0 5px 0; padding: 0; color:var(--pink); text-align:left; }
 .ss-plant-insights-loaction-text h4 {font-size: 12px; margin: 0; padding: 0; color:var(--gray); line-height: normal; font-weight: normal; text-align:left; }
+.usercheckbox-info {display: flex; align-items: center; gap: 15px; }
+
+.sscheckbox label {position: relative; display: inline-block; padding: 0 0 0 2em; line-height: 1.5; cursor: pointer; font-size: 14px; }
+.sscheckbox label::before,
+.sscheckbox label::after {position: absolute; top: 0; left: 0; display: block; width: 24px; height: 24px; }
+.sscheckbox label::before {content: " "; border: 1px solid #898a8c; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; }
+.sscheckbox input[type="checkbox"]{position: absolute; opacity: 0; z-index: -1; margin: 0; }
+.sscheckbox input[type="checkbox"] + label::after {content: "\2714"; color: #FFF; line-height: 1.9; text-align: center; border: none; }
+.sscheckbox input[type="checkbox"]:checked + label::before {background: var(--pink); border-color: var(--pink); }
+.sscheckbox input[type="checkbox"] + label::after{-webkit-transform: scale(0); -moz-transform: scale(0); -ms-transform: scale(0); -o-transform: scale(0); transform: scale(0); }
+.sscheckbox input[type="checkbox"]:checked + label::after{-webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transform: scale(1); }
+
+
