--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -66,13 +66,12 @@ h1, h2, h3, h4, h5, h6 {padding: 5px 0 15px 0;color: #fff;-webkit-font-smoothing
 .auth-card {position: relative; background:rgb(255 255 255 / 77%); box-shadow: 0px 4px 70px 10px rgba(0, 0, 0, 0.08); border-radius: 5px; backdrop-filter: blur(10px); }
 .brand-logo{margin-bottom: 1rem;}
 .brand-logo img{height: 100px}
-.forgotpsw-text a {font-size: 14px; color:var(--gray); }
-
+.forgotpsw-text a {font-size: 14px; color: var(--pink); text-decoration: underline; font-weight: 600; }
 .auth-content {padding: 4rem 2rem; position: relative; text-align: center; border-radius: 15px 0 0 15px; }
 .auth-form-info {margin: 0px; padding: 0px; display: flex; align-items: center; flex-wrap: wrap; background: var(--white); }
 .auth-form {padding: 30px; width: 100%; text-align: center; }
 .auth-form .form-group {margin-bottom: 1rem; }
-.auth-form .form-group label {color: #fff; font-size: 14px; font-weight: 600; }
+/*.auth-form .form-group label {color: #fff; font-size: 14px; font-weight: 600; }*/
 .auth-form input.form-control {background: transparent; border-radius: 5px; font-size: 13px; border: 1px solid var(--border); font-weight: 400; height: auto; padding: 0.94rem 0.94rem; outline: 0; width: 100%; display: inline-block; color: var(--pink); box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); }
 .auth-form input.form-control:focus {border: 1px solid var(--pink); }
 .auth-form input.form-control::-ms-input-placeholder { /* Edge 12-18 */ color: var(--border); }
@@ -81,6 +80,8 @@ button.auth-form-btn {outline: none; width: 100%; padding: 15px 40px; display: i
 .form-group-icon{position: relative;}
 .form-input-icon{position: absolute;right: 10px;top: 10px}
 
+button.btn-auth-gr {outline: none; width: 100%; padding: 15px 40px; display: inline-block; color: var(--white); font-size: 14px; font-weight: 600; border-radius: 5px; border: none; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); background:var(--green); }
+a.btn-auth-gr {outline: none; margin-top:10px; width: 100%; padding: 15px 40px; display: inline-block; color: var(--white); font-size: 14px; font-weight: 600; border-radius: 5px; border: none; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); background:var(--green); }
 
 
 .upload-file-item {padding: 10px;  position: relative; margin-bottom: 10px; border-radius: 10px; border: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; }
@@ -92,3 +93,14 @@ button.auth-form-btn {outline: none; width: 100%; padding: 15px 40px; display: i
 
 a.delete-btn {background: #fff; width: 40px; height: 40px; display: inline-block; text-align: center; line-height: 40px; border-radius: 50px; }
 
+.ss-rep-list {display: flex; align-items: center; gap: 20px; }
+
+.ssradiobox label {position: relative;border-radius: 5px;display: inline-block;padding:5px 10px 5px 32px;cursor: pointer;width: 100%;font-size: 14px;color:var(--gray);font-weight: bold;}
+.ssradiobox label::before,
+.ssradiobox label::after {position: absolute;top: 4px;left: 0;display: block;width: 24px;height: 24px;}
+.ssradiobox label::before {content: " "; border: 1px solid #7e7e88; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; }
+.ssradiobox input[type="radio"]{position: absolute; opacity: 0; z-index: -1; margin: 0; }
+.ssradiobox input[type="radio"] + label::after {content: "";border: none;width: 16px;height: 16px;background: #fff;left: 4px;right: 0;top: 8px;bottom: 0;border-radius: 50%;}
+.ssradiobox input[type="radio"]:checked + label::before {background:var(--pink);border-color:var(--pink);}
+.ssradiobox input[type="radio"] + label::after{-webkit-transform: scale(0); -moz-transform: scale(0); -ms-transform: scale(0); -o-transform: scale(0); transform: scale(0); }
+.ssradiobox input[type="radio"]:checked + label::after{-webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transform: scale(1); }
