--- a/public/admin/css/profile.css
+++ b/public/admin/css/profile.css
@@ -1,7 +1,11 @@
 .profile-info-item {margin-bottom: 1rem; background: var(--white); /* border: 1px solid var(--Lighter); */ padding: 10px; border-radius: 5px; display: flex; gap: 20px; box-shadow: 0px 8px 13px rgb(0 0 0 / 5%); }
 
-.profile-info-item-media {width:300px; height: 200px; position: relative; overflow: hidden; border-radius: 10px; }
+.profile-info-item-media {width:300px; height: 200px; position: relative;border-radius: 10px; }
 .profile-info-item-media img{width: 100%; height: 100%; object-fit: cover;}
+.profile-media-action a {position: absolute; right: -20px; top: -17px; }
+.profile-media-action a i {color: #f70000; font-size: 16px; background: #ffffff; width: 40px; height: 40px; border-radius: 50%; position: relative; text-align: center; line-height: 40px; box-shadow: 0 0 10px #eee; }
+
+
 
 .profile-info-item-content{ border-right: 1px solid var(--gray); position: relative; padding: 0 10px 0 0; flex: 1} 
 .profile-info-item-content h2 {font-size:20px; font-weight: 700; margin: 0 0 10px 0; padding: 0; color: var(--pink); }
