--- a/public/admin/css/communityowners.css
+++ b/public/admin/css/communityowners.css
@@ -11,7 +11,17 @@
 .user-contact-info-icon img {height: 32px; }
 .user-contact-info-content h2 {    font-size: 12px; font-weight: 700; margin: 0 0 5px 0; padding: 0; color:var(--pink); }
 .user-contact-info-content p {font-size: 12px; margin: 0; color:var(--gray); line-height: normal; font-weight: normal; }
-
+.usercheckbox-info {display: flex; align-items: center; gap: 15px; }
+.user-profile-text{flex: 1;}
+.sscheckbox label {position: relative; display: inline-block; padding: 0 0 0 2em; line-height: 1.5; cursor: pointer; font-size: 14px; }
+.sscheckbox label::before,
+.sscheckbox label::after {position: absolute; top: 0; left: 0; display: block; width: 24px; height: 24px; }
+.sscheckbox label::before {content: " "; border: 1px solid #898a8c; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; }
+.sscheckbox input[type="checkbox"]{position: absolute; opacity: 0; z-index: -1; margin: 0; }
+.sscheckbox input[type="checkbox"] + label::after {content: "\2714"; color: #FFF; line-height: 1.9; text-align: center; border: none; }
+.sscheckbox input[type="checkbox"]:checked + label::before {background: var(--pink); border-color: var(--pink); }
+.sscheckbox input[type="checkbox"] + label::after{-webkit-transform: scale(0); -moz-transform: scale(0); -ms-transform: scale(0); -o-transform: scale(0); transform: scale(0); }
+.sscheckbox input[type="checkbox"]:checked + label::after{-webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transform: scale(1); }
 
 .user-status-content h2 {    font-size: 12px; font-weight: 700; margin: 0 0 5px 0; padding: 0; color:var(--blue); }
 .status-text {font-size: 12px; color:var(--lightgray); line-height: normal; font-weight: normal; padding: 5px 13px; display: inline-block; border-radius: 5px; }
@@ -41,16 +51,19 @@
 .added-comminity-item-text .Viewbtn {outline: none;  padding:5px 20px; text-align: center; display: inline-block; color: var(--white); font-size: 14px; font-weight: 600; border-radius: 5px; border: none; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); background: var(--pink); margin-bottom: 5px; }
 
 
-.contacted-manufacturer-card {background: var(--white); border-radius: 5px; position: relative; }
-.contacted-manufacturer-head {border-bottom: 1px solid var(--body);padding: 10px; background: var(--white); border-radius: 10px 10px 0 0; display: flex; justify-content: space-between; align-items: center; }
-.contacted-manufacturer-head h2 {font-size: 16px; margin: 0; padding: 8px 0; color: var(--gray); font-weight: 600; }
-.contacted-manufacturer-body {padding: 10px; }
+.contacted-manufacturer-card {background: var(--white); border-radius: 5px; position: relative; padding:10px; }
+.contacted-manufacturer-head {  border-radius: 10px 10px 0 0; justify-content: space-between; align-items: center; }
+.contacted-manufacturer-head h2 {font-size: 16px; margin: 0; padding: 10px; color: var(--gray); font-weight: 600; }
+/*.contacted-manufacturer-body {padding: 10px; }*/
 .contacted-manufacturer-item {margin-bottom: 5px; padding: 10px; border-radius: 5px; background: var(--cardbg); display: flex; align-items: center; }
 
-.contacted-manufacturer-item-image {width: 60px; height: 60px; position: relative; overflow: hidden; border-radius: 50%; margin: 0 10px 0 0; border: 1px solid #eaedf7; }
+.contacted-manufacturer-item-image {position: relative; overflow: hidden; border-radius: 50%; margin: 0 10px 0 0; }
 .contacted-manufacturer-item-image img {object-fit: cover; width: 100%; height: 100%; }
-.contacted-manufacturer-item-text h4{font-size: 14px; font-weight: 600; margin: 0 0 5px 0; padding: 0; color: var(--gray); }
-
+.contacted-manufacturer-item-text h4{font-size: 14px; font-weight: 600; margin: 0 0 10px 0; padding: 0; color: var(--gray); }
+.contacted-manufacturer-item-text p.no-data{margin: 0; color: #696969;}
+.contacted-manufacturer-body .contacted-manufacturer-item-text p i{font-size: 18px; background: #5f0f58; margin-right: 4px; padding: 4px; border-radius: 4px; color: #fff;}
+.contacted-manufacturer-body .contacted-manufacturer-item-text p {font-size: 14px; font-weight: 600; margin: 0 0 5px 0; padding: 0; color: var(--gray);}
+.contacted-manufacturer-body .contacted-manufacturer-item-text p span{color: #5f0f58; font-weight: 600;}
 .ss-table-row {display: flex; flex-wrap: wrap; /* gap: 20px; */ /* border: 1px solid var(--body); */ /* padding: 10px; */ }
 
 .ss-table-col {flex: 0 0 auto; border: 1px solid var(--body); padding: 10px; width:100%; }
