--- a/public/admin/css/home.css
+++ b/public/admin/css/home.css
@@ -176,6 +176,8 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+}.user-profile-text {
+    flex: 1;
 }
 .user-profile-text h2 {
     font-size: 16px;
