--- a/public/admin/css/manufacturers.css
+++ b/public/admin/css/manufacturers.css
@@ -20,9 +20,9 @@ a.btnDownloadExcel {
 
 .user-profile-item {padding: 0 0 0rem 0; display: flex; align-items: center; }
 .user-profile-media {width: 60px; height: 60px; position: relative; overflow: hidden; border-radius: 50%; margin: 0 10px 0 0; border: 1px solid #eaedf7; }
-.user-profile-media img {object-fit: cover; width: 100%; height: 100%; }
+.user-profile-media img {object-fit: contain; width: 100%; height: 100%; }
 .user-profile-text h2 {font-size: 16px; font-weight: 600; margin: 0 0 5px 0; padding: 0; color: var(--gray); }
-
+.user-profile-text {flex: 1; }
 
 .user-contact-info {position: relative; width: 100%; border-radius: 0; padding:  0; display: flex; gap: 5px; margin-bottom: 0rem; }
 .user-contact-info-icon {width: 32px; height: 32px; line-height: 32px; }
